@@ -31,6 +31,16 @@
 #include "getconnstatus.h"
 #include "upnpurns.h"
 
+/* utility function */
+static int is_numeric(const char * s)
+{
+	while(*s) {
+		if(*s < '0' || *s > '9') return 0;
+		s++;
+	}
+	return 1;
+}
+
 static void
 BuildSendAndCloseSoapResp(struct upnphttp * h,
                           const char * body, int bodylen)
@@ -89,6 +99,9 @@ GetConnectionTypeInfo(struct upnphttp * h, const char * action, const char * ns)
 	BuildSendAndCloseSoapResp(h, body, bodylen);
 }
 
+/* maximum value for a UPNP ui4 type variable */
+#define UPNP_UI4_MAX (4294967295ul)
+
 static void
 GetTotalBytesSent(struct upnphttp * h, const char * action, const char * ns)
 {
@@ -107,7 +120,11 @@ GetTotalBytesSent(struct upnphttp * h, const char * action, const char * ns)
 	r = getifstats(ext_if_name, &data);
 	bodylen = snprintf(body, sizeof(body), resp,
 	         action, ns, /* was "urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1" */
+#ifdef UPNP_STRICT
+             r<0?0:(data.obytes & UPNP_UI4_MAX), action);
+#else /* UPNP_STRICT */
              r<0?0:data.obytes, action);
+#endif /* UPNP_STRICT */
 	BuildSendAndCloseSoapResp(h, body, bodylen);
 }
 
@@ -127,9 +144,18 @@ GetTotalBytesReceived(struct upnphttp * h, const char * action, const char * ns)
 	struct ifdata data;
 
 	r = getifstats(ext_if_name, &data);
+	/* TotalBytesReceived
+	 * This variable represents the cumulative counter for total number of
+	 * bytes received downstream across all connection service instances on
+	 * WANDevice. The count rolls over to 0 after it reaching the maximum
+	 * value (2^32)-1. */
 	bodylen = snprintf(body, sizeof(body), resp,
 	         action, ns, /* was "urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1" */
+#ifdef UPNP_STRICT
+	         r<0?0:(data.ibytes & UPNP_UI4_MAX), action);
+#else /* UPNP_STRICT */
 	         r<0?0:data.ibytes, action);
+#endif /* UPNP_STRICT */
 	BuildSendAndCloseSoapResp(h, body, bodylen);
 }
 
@@ -151,7 +177,11 @@ GetTotalPacketsSent(struct upnphttp * h, const char * action, const char * ns)
 	r = getifstats(ext_if_name, &data);
 	bodylen = snprintf(body, sizeof(body), resp,
 	         action, ns,/*"urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1",*/
+#ifdef UPNP_STRICT
+	         r<0?0:(data.opackets & UPNP_UI4_MAX), action);
+#else /* UPNP_STRICT */
 	         r<0?0:data.opackets, action);
+#endif /* UPNP_STRICT */
 	BuildSendAndCloseSoapResp(h, body, bodylen);
 }
 
@@ -173,7 +203,11 @@ GetTotalPacketsReceived(struct upnphttp * h, const char * action, const char * n
 	r = getifstats(ext_if_name, &data);
 	bodylen = snprintf(body, sizeof(body), resp,
 	         action, ns, /* was "urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1" */
+#ifdef UPNP_STRICT
+	         r<0?0:(data.ipackets & UPNP_UI4_MAX), action);
+#else /* UPNP_STRICT */
 	         r<0?0:data.ipackets, action);
+#endif /* UPNP_STRICT */
 	BuildSendAndCloseSoapResp(h, body, bodylen);
 }
 
@@ -545,6 +579,11 @@ AddAnyPortMapping(struct upnphttp * h, const char * action, const char * ns)
 
 	eport = (unsigned short)atoi(ext_port);
 	iport = (unsigned short)atoi(int_port);
+	if(iport == 0 || !is_numeric(ext_port)) {
+		ClearNameValueList(&data);
+		SoapError(h, 402, "Invalid Args");
+		return;
+	}
 #ifndef SUPPORT_REMOTEHOST
 #ifdef UPNP_STRICT
 	if (r_host && (strlen(r_host) > 0) && (0 != strcmp(r_host, "*")))
@@ -675,6 +714,12 @@ GetSpecificPortMappingEntry(struct upnphttp * h, const char * action, const char
 #endif
 
 	eport = (unsigned short)atoi(ext_port);
+	if(eport == 0)
+	{
+		ClearNameValueList(&data);
+		SoapError(h, 402, "Invalid Args");
+		return;
+	}
 
 	/* TODO : add r_host as an input parameter ...
 	 * We prevent several Port Mapping with same external port
@@ -758,6 +803,12 @@ DeletePortMapping(struct upnphttp * h, const char * action, const char * ns)
 #endif /* SUPPORT_REMOTEHOST */
 
 	eport = (unsigned short)atoi(ext_port);
+	if(eport == 0)
+	{
+		ClearNameValueList(&data);
+		SoapError(h, 402, "Invalid Args");
+		return;
+	}
 
 	syslog(LOG_INFO, "%s: external port: %hu, protocol: %s",
 		action, eport, protocol);
@@ -835,7 +886,8 @@ DeletePortMappingRange(struct upnphttp * h, const char * action, const char * ns
 	endport_s = GetValueFromNameValueList(&data, "NewEndPort");
 	protocol = GetValueFromNameValueList(&data, "NewProtocol");
 	/*manage = atoi(GetValueFromNameValueList(&data, "NewManage"));*/
-	if(startport_s == NULL || endport_s == NULL || protocol == NULL) {
+	if(startport_s == NULL || endport_s == NULL || protocol == NULL ||
+	   !is_numeric(startport_s) || !is_numeric(endport_s)) {
 		SoapError(h, 402, "Invalid Args");
 		ClearNameValueList(&data);
 		return;
@@ -1023,7 +1075,8 @@ GetListOfPortMappings(struct upnphttp * h, const char * action, const char * ns)
 	/*manage_s = GetValueFromNameValueList(&data, "NewManage");*/
 	number_s = GetValueFromNameValueList(&data, "NewNumberOfPorts");
 	if(startport_s == NULL || endport_s == NULL || protocol == NULL ||
-	   number_s == NULL) {
+	   number_s == NULL || !is_numeric(number_s) ||
+	   !is_numeric(startport_s) || !is_numeric(endport_s)) {
 		SoapError(h, 402, "Invalid Args");
 		ClearNameValueList(&data);
 		return;
